--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ July - 2011
 html{background:url(./images/bg.gif) repeat #f5f5f4; height:100%;}
 
 
-
+/*
 @font-face {
   font-family: "Roboto";
   font-style: normal;
@@ -23,8 +23,6 @@ html{background:url(./images/bg.gif) repeat #f5f5f4; height:100%;}
   src: local("Roboto Regular"), local("Roboto-Regular"), url("http://themes.googleusercontent.com/static/fonts/roboto/v8/2UX7WLTfW3W8TclTUvlFyQ.woff") format("woff");
 }
 
-
-/*
 @font-face {
   font-family: "Merriweather Sans";
   font-style: normal;
@@ -39,6 +37,20 @@ html{background:url(./images/bg.gif) repeat #f5f5f4; height:100%;}
   src: local("Merriweather Sans Bold"), local("MerriweatherSans-Bold"), url("http://themes.googleusercontent.com/static/fonts/merriweathersans/v2/6LmGj5dOJopQKEkt88GowQfd-b-I5PxxcmB4_-MNcqw.woff") format("woff");
 }
 */
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("Roboto-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("Roboto-Regular.woff") format("woff");
+}
 
 @font-face {
   font-family: "Merriweather Sans";
