--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@ html{background:url(./images/bg.gif) repeat #f5f5f4; height:100%;}
   font-weight: 700;
   src: local("Merriweather Sans Bold"), local("MerriweatherSans-Bold"), url("http://themes.googleusercontent.com/static/fonts/merriweathersans/v2/6LmGj5dOJopQKEkt88GowQfd-b-I5PxxcmB4_-MNcqw.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Open Sans"), local("OpenSans"), url("http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff") format("woff");
+}
+
 */
 
 @font-face {
@@ -66,18 +74,18 @@ html{background:url(./images/bg.gif) repeat #f5f5f4; height:100%;}
   src: url("MerriweatherSans-Bold.woff") format("woff");
 }
 
-
-
-
-
-
-
 @font-face {
   font-family: "Open Sans";
-font-style: normal;
+  font-style: normal;
   font-weight: 400;
-  src: local("Open Sans"), local("OpenSans"), url("http://themes.googleusercontent.com/static/fonts/opensans/v6/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff") format("woff");
+  src: url("OpenSans.woff") format("woff");
 }
+
+
+
+
+
+
 
 strong {
    font-family: "Merriweather Sans","Roboto",Helvetica,Helvetica Neue,Arial;
